--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --watch 'src/' --exec ts-node src/index.ts -e ts"
+    "start:dev": "nodemon --watch src/ --exec ts-node src/index.ts -e ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.1.1",
@@ -20,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "fastify": "^4.25.1",
     "nodemon": "^3.0.2"
   }
 }
