--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.4",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "dotenv": "^16.3.1",
@@ -24,6 +25,7 @@
   "dependencies": {
     "fastify": "^4.25.1",
     "mongodb": "^6.3.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "validator": "^13.11.0"
   }
 }
