--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "fastify": "^4.25.1",
+    "fastify-plugin": "^4.5.1",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "validator": "^13.11.0"
